implementation for tournaments, substages, casters, and streaming