@@ -2,7 +2,9 @@ package com.apollo.backendapi.pojos;
 
 import com.apollo.backend.data.Broadcaster;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class GetBroadcaster {
     public int broadcasterId;
@@ -19,7 +21,14 @@ public class GetBroadcaster {
         this.broadcasterExternalId = b.getBroadcasterExternalId();
         this.broadcasterPlatformId = b.getBroadcasterPlatformId();
         this.broadcasterDefaultLanguageId = b.getBroadcasterDefaultLanguageId();
-        this.broadcasts = b.getBroadcasts().stream().map(GetBroadcast::new).toList();
+        if (b.getBroadcasts() != null) {
+            this.broadcasts = b.getBroadcasts().stream()
+                    .map(GetBroadcast::new)
+                    .collect(Collectors.toList());
+        } else {
+            // Decide whether to set it to null or an empty list
+            this.broadcasts = Collections.emptyList();
+        }
         this.official = b.isOfficial();
     }
 }
